# multithreading_online_tic_tac_toe

./: README.md
client_part/: CMakeLists.txt  Client.cpp  Client.hpp  main.cpp
server_part/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
server_part/Connector/: Connector.cpp  Connector.hpp
server_part/Game/: Game.cpp  Game.hpp
server_part/Game/Field/: Field.cpp  Field.hpp
